; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm_adsp.c_wm_halo_init.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_wm_adsp.c_wm_halo_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm_adsp = type { i32, i32* }

@wm_halo_ops = common dso_local global i32 0, align 4
@wm_adsp_boot_work = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wm_halo_init(%struct.wm_adsp* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.wm_adsp*, align 8
  %4 = alloca i32, align 4
  store %struct.wm_adsp* %0, %struct.wm_adsp** %3, align 8
  %5 = load %struct.wm_adsp*, %struct.wm_adsp** %3, align 8
  %6 = call i32 @wm_adsp_common_init(%struct.wm_adsp* %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %2, align 4
  br label %18

11:                                               ; preds = %1
  %12 = load %struct.wm_adsp*, %struct.wm_adsp** %3, align 8
  %13 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %12, i32 0, i32 1
  store i32* @wm_halo_ops, i32** %13, align 8
  %14 = load %struct.wm_adsp*, %struct.wm_adsp** %3, align 8
  %15 = getelementptr inbounds %struct.wm_adsp, %struct.wm_adsp* %14, i32 0, i32 0
  %16 = load i32, i32* @wm_adsp_boot_work, align 4
  %17 = call i32 @INIT_WORK(i32* %15, i32 %16)
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %11, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @wm_adsp_common_init(%struct.wm_adsp*) #1

declare dso_local i32 @INIT_WORK(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
